--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Our Flask</title>
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/fontawesome.css">
-    <link rel="stylesheet" href="assets/css/templatemo-space-dynamic.css">
+    <link rel="stylesheet" href="assets/css/space.css">
     <link rel="stylesheet" href="assets/css/animated.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -87,8 +87,9 @@
 
                             </form>
                             <!-- <p>
-              <h3>Predicted Car Price : ${{harga}}</h3>
-              </p> -->
+                            <h3>Predicted Car Price : ${{harga}}</h3>
+                            </p> -->
+
                         </div>
 
                         <div class="card" style="width: 38rem; margin-top: 10px;">
@@ -151,7 +152,7 @@
     <script src="assets/js/owl-carousel.js"></script>
     <script src="assets/js/animation.js"></script>
     <script src="assets/js/imagesloaded.js"></script>
-    <script src="assets/js/templatemo-custom.js"></script>
+    <script src="assets/js/custom.js"></script>
 
 </body>
 
